# ppf.angauge

./: .gitignore  LICENSE  MANIFEST.in  setup.cfg  tox.ini
.github/workflows/: tox.yml
diag/: pre_transform_optimizer.py
docs/: BUGS.md  CONTRIBUTING.md  README.md  README_pypi.md  TODO.md
docs/dev/: DEV_DOCS.md  notes.md  performance.md  release_process.md  roadmap.md  tricky_cases.md
src/: read_meter.py
src/ppf/angauge/: __init__.py  _angauge.py  _bayes.py  _cli.py  _image_processing.py  _io.py
src/ppf/watermeter/: __init__.py  _bayes.py  _cli.py  _io.py  _watermeter.py  bayes.py  cli.py  diagnostics.py  image_processing.py  io.py  watermeter.py
tests/: memory_profile.py  perf_1by1.sh  perf_all_in_1_call.sh  test_bayes.py  test_cli.py  test_imgproc.py  test_io.py
tests/data/: config.toml  config.tsv  config_thermometer.toml  config_watermeter.toml  readings.txt  readings_bmp.txt
