[metadata]
name = ppf.angauge
description = Convert images of analog gauge to readings
long_description = file: docs/README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.angauge/tree/develop
project_urls =
    Bug Reports = https://github.com/adrianschlatter/ppf.angauge/issues
    Source = https://github.com/adrianschlatter/ppf.angauge
author = Adrian Schlatter
# Do *not* provide author_email here. Instead, provide email for
# software / licensing / ... questions (centrally) on GitHub.
# If email changes (e.g. discard because of too much spam),
# adjust email in single place instead of in every package.

license = MIT
license_files = LICENSE

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Utilities
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = analog, gauge, digitize, indicator, clock, hand, automation

[options]
package_dir = 
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.5, <4
install_requires =
    scikit-image
    numpy
    importlib_metadata;python_version<='3.8'
    tomli;python_version<'3.11'

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using:
# pip install -e .[dev,test]
test =
    check-manifest
    setuptools>=40.5.0
    flake8
    pytest
    pytest-cov
    coverage
    memory_profiler>=0.61.0
dev =
    build
    tox
    twine

[options.entry_points]
console_scripts =
    read_gauge = ppf.angauge._cli:main

[tool:pytest]
testpaths =
    tests
addopts =
    --cov=ppf.angauge
    --cov-report=

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F405, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

[coverage:run]
command_line = -m pytest
branch = True

[coverage:report]
omit = tests/*
